--- a/.gitconfig
+++ b/.gitconfig
@@ -1,3 +1,3 @@
 [user]
-	name = "nikolajjsj"
-	email = "10490273+nikolajjsj@users.noreply.github.com"
+	name = nikolajjsj
+	email = 10490273+nikolajjsj@users.noreply.github.com
