--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,33 +1,48 @@
-##########
-## Keys ##
-##########
+## Setting the master key
+unbind-key C-b              # free the original bind-key key
+set-option -g prefix C-a    # setting the prefix from C-b to C-a
+bind-key C-a send-prefix    # ensure that we can send Ctrl-A to other apps or the shell that your interacting
+
+set-option -g base-index 1                # window index will start with 1
+set-window-option -g pane-base-index 1    # pane index will start with 1
+set-option -g renumber-windows on
+
+## Keys bindings
 # Resizing pane
 bind -r C-k resize-pane -U 5
 bind -r C-j resize-pane -D 5
 bind -r C-h resize-pane -L 5
 bind -r C-l resize-pane -R 5
-
 # vim-like pane switching
 bind -r k select-pane -U
 bind -r j select-pane -D
 bind -r h select-pane -L
 bind -r l select-pane -R
-
 # Reload TMUX config
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
-###########
-## Style ##
-###########
+## Enable mouse control (clickable windows, panes, resizable panes)
+set -g mouse on
+
+## Styling
 # default statusbar colors
-set-option -g status-style bg=colour235,fg=colour136,default
+set-option -g status-style bg=color235,fg=colour136,default
 set-option -g status-fg cyan
 set-option -g status-bg black
-set -g pane-active-border-style fg=colour166,bg=default
 set -g window-style fg=colour10,bg=default
 set -g window-active-style fg=colour12,bg=default
-# Border style
-set-option -g pane-border-style fg=colour235 #base02
-set-option -g pane-active-border-style fg=colour136,bg=colour235
-# clock
-set-window-option -g clock-mode-colour colour64 #green
+set -g pane-border-style fg=brightblack,bg=black
+set -g pane-active-border-style fg=blue,bg=black
+
+# status bar
+# set-option -g status-utf8 on
+
+set -g status-interval 1
+set -g status-justify centre # center align window list
+set -g status-left-length 20
+set -g status-right-length 140
+set -g status-left '#[fg=green]#H #[fg=black]• #[fg=green,bright]#(uname -r | cut -c 1-6)#[default]'
+set -g status-right '#[fg=green]#(cut -f 4-5 -d " " | cut -f 1 -d ",") %a%l:%M:%S %p %Y-%m-%d'
+
+# Check is SSH connection if yes backgound color is red
+if-shell 'test "$SSH_CONNECTION"' 'set -g status-bg red'
