--- a/.tmux.conf
+++ b/.tmux.conf
@@ -42,7 +42,7 @@ set -g status-justify centre # center align window list
 set -g status-left-length 20
 set -g status-right-length 140
 set -g status-left '#[fg=green]#H #[fg=black]• #[fg=green,bright]#(uname -r | cut -c 1-6)#[default]'
-set -g status-right '#[fg=green]#(cut -f 4-5 -d " " | cut -f 1 -d ",") %a%l:%M:%S %p %Y-%m-%d'
+set -g status-right '#[fg=green]#(cut -f 4-5 -d " " | cut -f 1 -d ",") %a %H:%M:%S %Y-%m-%d'
 
 # Check is SSH connection if yes backgound color is red
 if-shell 'test "$SSH_CONNECTION"' 'set -g status-bg red'
