--- a/alacritty.yml
+++ b/alacritty.yml
@@ -45,23 +45,39 @@ font:
 # If `true`, bold text is drawn using the bright color variants.
 draw_bold_text_with_bright_colors: false
 
-# Colors (Doom One)
+# Colors (Tomorrow Night)
 colors:
   # Default colors
   primary:
-    background: '0x282c34'
-    foreground: '0xbbc2cf'
+    background: '0x1d1f21'
+    foreground: '0xc5c8c6'
+
+  # Colors the cursor will use if `custom_cursor_colors` is true
+  cursor:
+    text: '0x1d1f21'
+    cursor: '0xffffff'
 
   # Normal colors
   normal:
-    black:   '0x282c34'
-    red:     '0xff6c6b'
-    green:   '0x98be65'
-    yellow:  '0xecbe7b'
-    blue:    '0x51afef'
-    magenta: '0xc678dd'
-    cyan:    '0x46d9ff'
-    white:   '0xbbc2cf'
+    black:   '0x1d1f21'
+    red:     '0xcc6666'
+    green:   '0xb5bd68'
+    yellow:  '0xe6c547'
+    blue:    '0x81a2be'
+    magenta: '0xb294bb'
+    cyan:    '0x70c0ba'
+    white:   '0x373b41'
+
+  # Bright colors
+  bright:
+    black:   '0x666666'
+    red:     '0xff3334'
+    green:   '0x9ec400'
+    yellow:  '0xf0c674'
+    blue:    '0x81a2be'
+    magenta: '0xb77ee0'
+    cyan:    '0x54ced6'
+    white:   '0x282a2e'
 
 # Background opacity
 background_opacity: .95
