Modify statusbar + fix ESC key delay in vim mode

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,6 +7,9 @@ set-option -g base-index 1                # window index will start with 1
 set-window-option -g pane-base-index 1    # pane index will start with 1
 set-option -g renumber-windows on
 
+# Dont show the [ESC] delay
+set -s escape-time 0
+
 ## Keys bindings
 # Resizing pane
 bind -r C-k resize-pane -U 5
@@ -24,25 +27,36 @@ bind r source-file ~/.tmux.conf \; display "Reloaded!"
 ## Enable mouse control (clickable windows, panes, resizable panes)
 set -g mouse on
 
-## Styling
-# default statusbar colors
-set-option -g status-style bg=color235,fg=colour136,default
-set-option -g status-fg cyan
-set-option -g status-bg black
-set -g window-style fg=colour10,bg=default
-set -g window-active-style fg=colour12,bg=default
-set -g pane-border-style fg=brightblack,bg=black
-set -g pane-active-border-style fg=blue,bg=black
+# Set 256 color
+set -g default-terminal "screen-256color"
 
-# status bar
-# set-option -g status-utf8 on
-
-set -g status-interval 1
-set -g status-justify centre # center align window list
-set -g status-left-length 20
-set -g status-right-length 140
-set -g status-left '#[fg=green]#H #[fg=black]• #[fg=green,bright]#(uname -r | cut -c 1-6)#[default]'
-set -g status-right '#[fg=green]#(cut -f 4-5 -d " " | cut -f 1 -d ",") %a %H:%M:%S %Y-%m-%d'
+# Styling
+set -g status-bg 'colour235'
+set -g message-command-fg 'colour222'
+set -g status-justify 'centre'
+set -g status-left-length '100'
+set -g status 'on'
+set -g pane-active-border-fg 'colour154'
+set -g message-bg 'colour238'
+set -g status-right-length '100'
+set -g status-right-attr 'none'
+set -g message-fg 'colour222'
+set -g message-command-bg 'colour238'
+set -g status-attr 'none'
+set -g status-utf8 'on'
+set -g pane-border-fg 'colour238'
+set -g status-left-attr 'none'
+setw -g window-status-fg 'colour121'
+setw -g window-status-attr 'none'
+setw -g window-status-activity-bg 'colour235'
+setw -g window-status-activity-attr 'none'
+setw -g window-status-activity-fg 'colour154'
+setw -g window-status-separator ''
+setw -g window-status-bg 'colour235'
+set -g status-left '#[fg=colour232,bg=colour154] #S #[fg=colour154,bg=colour238,nobold,nounderscore,noitalics]#[fg=colour222,bg=:colour238] #W #[fg=colour238,bg=colour235,nobold,nounderscore,noitalics]#[fg=colour121,bg=colour235] #(whoami) #[fg=colour235,bg=colour235,nobold,nounderscore,noitalics]'
+set -g status-right '#[fg=colour235,bg=colour235,nobold,nounderscore,noitalics]#[fg=colour121,bg=colour235] %H:%M:%S  %a  %Y #[fg=colour238,bg=colour235,nobold,nounderscore,noitalics]'
+setw -g window-status-format '#[fg=colour235,bg=colour235,nobold,nounderscore,noitalics]#[default] #I  #W #[fg=colour235,bg=colour235,nobold,nounderscore,noitalics]'
+setw -g window-status-current-format '#[fg=colour235,bg=colour238,nobold,nounderscore,noitalics]#[fg=colour222,bg=colour238] #I  #W  #F #[fg=colour238,bg=colour235,nobold,nounderscore,noitalics]'
 
 # Check is SSH connection if yes backgound color is red
 if-shell 'test "$SSH_CONNECTION"' 'set -g status-bg red'
