--- a/alacritty.yml
+++ b/alacritty.yml
@@ -16,7 +16,7 @@ window:
   # - none: neither borders nor title bar
   # - transparent: title bar, transparent background and title bar buttons
   # - buttonless: title bar, transparent background, but no title bar buttons
-  decorations: buttonless
+  decorations: Full
 
   # Startup Mode (changes require restart)
   # Values for `startup_mode`:
@@ -39,7 +39,7 @@ font:
     family: FiraCode Nerd Font
   italic:
     family: FiraCode Nerd Font
-  size: 12.0
+  size: 11.0
   use_thin_strokes: true
 
 # If `true`, bold text is drawn using the bright color variants.
