--- a/alacritty.yml
+++ b/alacritty.yml
@@ -16,7 +16,7 @@ window:
   # - none: neither borders nor title bar
   # - transparent: title bar, transparent background and title bar buttons
   # - buttonless: title bar, transparent background, but no title bar buttons
-  decorations: Full
+  decorations: full
 
   # Startup Mode (changes require restart)
   # Values for `startup_mode`:
@@ -39,14 +39,13 @@ font:
     family: FiraCode Nerd Font
   italic:
     family: FiraCode Nerd Font
-  size: 11.0
+  size: 12.0
   use_thin_strokes: true
 
 # If `true`, bold text is drawn using the bright color variants.
 draw_bold_text_with_bright_colors: false
 
 # Colors (One Darker)
-# Note I am using alacritty-ligatures until ligatures make it upstream
 colors:
   # Default colors
   primary:
