--- a/.tmux.conf
+++ b/.tmux.conf
@@ -24,6 +24,9 @@ bind -r l select-pane -R
 # Reload TMUX config
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
+# Use cht.sh website on a new tmux window
+bind-key -r i run-shell "tmux neww ~/code/.dotfiles/scripts/cht.sh"
+
 ## Enable mouse control (clickable windows, panes, resizable panes)
 set -g mouse on
 
@@ -32,27 +35,11 @@ set -g default-terminal "screen-256color"
 
 # Styling
 set -g status-bg 'colour235'
-set -g message-command-fg 'colour222'
 set -g status-justify 'centre'
 set -g status-left-length '100'
 set -g status 'on'
-set -g pane-active-border-fg 'colour154'
-set -g message-bg 'colour238'
 set -g status-right-length '100'
-set -g status-right-attr 'none'
-set -g message-fg 'colour222'
-set -g message-command-bg 'colour238'
-set -g status-attr 'none'
-set -g status-utf8 'on'
-set -g pane-border-fg 'colour238'
-set -g status-left-attr 'none'
-setw -g window-status-fg 'colour121'
-setw -g window-status-attr 'none'
-setw -g window-status-activity-bg 'colour235'
-setw -g window-status-activity-attr 'none'
-setw -g window-status-activity-fg 'colour154'
 setw -g window-status-separator ''
-setw -g window-status-bg 'colour235'
 set -g status-left '#[fg=colour232,bg=colour154] #S #[fg=colour154,bg=colour238,nobold,nounderscore,noitalics]#[fg=colour222,bg=:colour238] #W #[fg=colour238,bg=colour235,nobold,nounderscore,noitalics]#[fg=colour121,bg=colour235] #(whoami) #[fg=colour235,bg=colour235,nobold,nounderscore,noitalics]'
 set -g status-right '#[fg=colour235,bg=colour235,nobold,nounderscore,noitalics]#[fg=colour121,bg=colour235] %H:%M:%S  %a  %Y #[fg=colour238,bg=colour235,nobold,nounderscore,noitalics]'
 setw -g window-status-format '#[fg=colour235,bg=colour235,nobold,nounderscore,noitalics]#[default] #I  #W #[fg=colour235,bg=colour235,nobold,nounderscore,noitalics]'
