Update alacritty + tmux configs

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -30,7 +30,7 @@ bind-key -r i run-shell "tmux neww ~/code/.dotfiles/scripts/cht.sh"
 ## Enable mouse control (clickable windows, panes, resizable panes)
 set -g mouse on
 
-# Set 256 color
+# Add true color & italics support with alacritty terminal
 set -g default-terminal "screen-256color"
 
 # Styling
