--- a/alacritty.yml
+++ b/alacritty.yml
@@ -7,8 +7,8 @@ window:
     columns: 125
     lines: 40
   padding:
-    x: 8
-    y: 2
+    x: 4
+    y: 8
 
   # Window decorations
   # Available values:
@@ -45,52 +45,44 @@ font:
 # If `true`, bold text is drawn using the bright color variants.
 draw_bold_text_with_bright_colors: false
 
-# Colors (One Darker)
+# Colors (Gruvbox dark)
 colors:
   # Default colors
   primary:
-    background: "#1e2127"
-    foreground: "#D8DEE9"
+    # hard contrast: background = '#1d2021'
+    background: '#282828'
+    # soft contrast: background = '#32302f'
+    foreground: '#ebdbb2'
 
   # Normal colors
   normal:
-    black: "#4C566A"
-    red: "#bf616a"
-    green: "#A3BE8C"
-    yellow: "#D7BA7D"
-    blue: "#5e81ac"
-    magenta: "#B48EAD"
-    cyan: "#88c0d0"
-    white: "#abb2bf"
+    black:   '#282828'
+    red:     '#cc241d'
+    green:   '#98971a'
+    yellow:  '#d79921'
+    blue:    '#458588'
+    magenta: '#b16286'
+    cyan:    '#689d6a'
+    white:   '#a89984'
 
   # Bright colors
   bright:
-    black: "#4C566A"
-    red: "#bf616a"
-    green: "#A3BE8C"
-    yellow: "#D7BA7D"
-    blue: "#5e81ac"
-    magenta: "#B48EAD"
-    cyan: "#88c0d0"
-    white: "#abb2bf"
+    black:   '#928374'
+    red:     '#fb4934'
+    green:   '#b8bb26'
+    yellow:  '#fabd2f'
+    blue:    '#83a598'
+    magenta: '#d3869b'
+    cyan:    '#8ec07c'
+    white:   '#ebdbb2'
 
-  # background_opacity: 1.0
-
-  # Change cursor colors
+# Change cursor colors
   cursor:
     text: "#3B4252"
     cursor: "#ECEFF4"
 
 # Background opacity
 background_opacity: .95
-
-mouse:
-  # Click settings
-  # The `double_click` and `triple_click` settings control the time
-  # alacritty should wait for accepting multiple clicks as one double
-  # or triple click.
-  double_click: { threshold: 300 }
-  triple_click: { threshold: 300 }
 
 cursor:
   # Cursor style
