--- a/.tmux.conf
+++ b/.tmux.conf
@@ -33,17 +33,23 @@ set -g mouse on
 # Add true color & italics support with alacritty terminal
 set -g default-terminal "screen-256color"
 
+# Set status bar on
+set -g status on
+
 # Styling
-set -g status-bg 'colour235'
-set -g status-justify 'centre'
-set -g status-left-length '100'
-set -g status 'on'
-set -g status-right-length '100'
-setw -g window-status-separator ''
-set -g status-left '#[fg=colour232,bg=colour154] #S #[fg=colour154,bg=colour238,nobold,nounderscore,noitalics]#[fg=colour222,bg=:colour238] #W #[fg=colour238,bg=colour235,nobold,nounderscore,noitalics]#[fg=colour121,bg=colour235] #(whoami) #[fg=colour235,bg=colour235,nobold,nounderscore,noitalics]'
-set -g status-right '#[fg=colour235,bg=colour235,nobold,nounderscore,noitalics]#[fg=colour121,bg=colour235] %H:%M:%S  %a  %Y #[fg=colour238,bg=colour235,nobold,nounderscore,noitalics]'
-setw -g window-status-format '#[fg=colour235,bg=colour235,nobold,nounderscore,noitalics]#[default] #I  #W #[fg=colour235,bg=colour235,nobold,nounderscore,noitalics]'
-setw -g window-status-current-format '#[fg=colour235,bg=colour238,nobold,nounderscore,noitalics]#[fg=colour222,bg=colour238] #I  #W  #F #[fg=colour238,bg=colour235,nobold,nounderscore,noitalics]'
+set -g status-position top               # statusbar position
+set -g status-style bg=default
+# Set left side status bar length and style
+set -g status-left-length 60
+# Display the session name
+set -g status-left "#[fg=colour15,bold] [❐ #S] #[default]"
+# Set right side status bar length and style
+set -g status-right-length 140
+# Set the inactive window color and style
+set -g window-status-style fg=colour244,bg=default
+set -g window-status-format ' #I #W '
+# Window list centered
+set -g status-justify centre
 
 # Check is SSH connection if yes backgound color is red
 if-shell 'test "$SSH_CONNECTION"' 'set -g status-bg red'
