Update tmux master key

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,7 +1,6 @@
 ## Setting the master key
 unbind-key C-b              # free the original bind-key key
-set-option -g prefix C-a    # setting the prefix from C-b to C-a
-bind-key C-a send-prefix    # ensure that we can send Ctrl-A to other apps or the shell that your interacting
+set -g prefix C-Space       # Set master key to C-Space
 
 set-option -g base-index 1                # window index will start with 1
 set-window-option -g pane-base-index 1    # pane index will start with 1
