Add padding to kitty config

--- a/kitty.conf
+++ b/kitty.conf
@@ -12,6 +12,7 @@ wheel_scroll_multiplier 5.0
 url_color #0087bd
 open_url_with default
 
+window_padding_width 4
 initial_window_width  640
 initial_window_height 400
 tab_bar_style powerline
