--- a/.tmux.conf
+++ b/.tmux.conf
@@ -31,3 +31,15 @@ set -g status-style bg=default
 
 # Check is SSH connection if yes backgound color is red
 if-shell 'test "$SSH_CONNECTION"' 'set -g status-bg red'
+
+# TPM stuff 
+# Installation: "git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm"
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'dracula/tmux'
+
+set -g @dracula-show-powerline true
+set -g @dracula-show-left-icon session
+set -g @dracula-plugins "cpu-usage ram-usage"
+
+run '~/.tmux/plugins/tpm/tpm'
