refactor: tmux config remove unused stuff

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -6,11 +6,6 @@ set-option -g renumber-windows on
 set -s escape-time 0
 
 ## Keys bindings
-# Resizing pane
-bind -r C-k resize-pane -U 5
-bind -r C-j resize-pane -D 5
-bind -r C-h resize-pane -L 5
-bind -r C-l resize-pane -R 5
 # vim-like pane switching
 bind -r k select-pane -U
 bind -r j select-pane -D
@@ -25,10 +20,6 @@ set -g mouse on
 # Add true color & italics support with alacritty terminal
 set -g default-terminal "screen-256color"
 
-# Set status bar on
-set -g status on
-set -g status-style bg=default
-
 # Check is SSH connection if yes backgound color is red
 if-shell 'test "$SSH_CONNECTION"' 'set -g status-bg red'
 
@@ -41,5 +32,9 @@ set -g @plugin 'dracula/tmux'
 set -g @dracula-show-powerline true
 set -g @dracula-show-left-icon session
 set -g @dracula-plugins "cpu-usage ram-usage"
+
+# Automatic TPM installation
+if "test ! -d ~/.tmux/plugins/tpm" \
+   "run 'git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm && ~/.tmux/plugins/tpm/bin/install_plugins'"
 
 run '~/.tmux/plugins/tpm/tpm'
