feat(kitty): update kitty config

--- a/kitty.conf
+++ b/kitty.conf
@@ -1,57 +1,62 @@
 editor nvim
-enable_audio_bell yes
-
 font_family      FiraCode Nerd Font
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
-font_size 12.0
+font_size 13.0
 adjust_line_height  1
 scrollback_lines 1000
 wheel_scroll_multiplier 5.0
 url_color #0087bd
 open_url_with default
-
 window_padding_width 4
 initial_window_width  640
 initial_window_height 400
 tab_bar_style powerline
 tab_powerline_style round
-active_tab_foreground   #ebdbb2
-active_tab_background   #504945
-inactive_tab_foreground #ebdbb2
-inactive_tab_background #1d2021
-
-macos_titlebar_color system
 macos_quit_when_last_window_closed yes
 
-foreground            #ebdbb2
-background            #272727
-selection_foreground  #655b53
-selection_background  #ebdbb2
-url_color             #d65c0d
-
+# Dracula theme
+foreground            #f8f8f2
+background            #282a36
+selection_foreground  #ffffff
+selection_background  #44475a
+url_color #8be9fd
 # black
-color0   #272727
-color8   #928373
+color0  #21222c
+color8  #6272a4
 # red
-color1   #cc231c
-color9   #fb4833
+color1  #ff5555
+color9  #ff6e6e
 # green
-color2   #989719
-color10  #b8ba25
+color2  #50fa7b
+color10 #69ff94
 # yellow
-color3   #d79920
-color11  #fabc2e
+color3  #f1fa8c
+color11 #ffffa5
 # blue
-color4  #448488
-color12 #83a597
+color4  #bd93f9
+color12 #d6acff
 # magenta
-color5   #b16185
-color13  #d3859a
+color5  #ff79c6
+color13 #ff92df
 # cyan
-color6   #689d69
-color14  #8ec07b
+color6  #8be9fd
+color14 #a4ffff
 # white
-color7   #a89983
-color15  #ebdbb2
+color7  #f8f8f2
+color15 #ffffff
+# Cursor colors
+cursor            #f8f8f2
+cursor_text_color background
+# Tab bar colors
+active_tab_foreground   #282a36
+active_tab_background   #f8f8f2
+inactive_tab_foreground #282a36
+inactive_tab_background #6272a4
+# Marks
+mark1_foreground #282a36
+mark1_background #ff5555
+# Splits/Windows
+active_border_color #f8f8f2
+inactive_border_color #6272a4
