feat(neovim): update null-ls configuration

--- a/kitty.conf
+++ b/kitty.conf
@@ -8,6 +8,7 @@ adjust_line_height  1
 scrollback_lines 1000
 wheel_scroll_multiplier 5.0
 url_color #0087bd
+allow_hyperlinks yes
 open_url_with default
 window_padding_width 4
 initial_window_width  640
