--- a/.tmux.conf
+++ b/.tmux.conf
@@ -21,10 +21,6 @@ set -g mouse on
 # Installation: "git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm"
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'dracula/tmux'
-
-set -g @dracula-show-powerline true
-set -g @dracula-show-left-icon session
-set -g @dracula-plugins "cpu-usage ram-usage"
+set -g @plugin 'catppuccin/tmux'
 
 run '~/.tmux/plugins/tpm/tpm'
