feat(tmux): enable mouse mode

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,9 +1,11 @@
-set-option -g base-index 1                # window index will start with 1
-set-window-option -g pane-base-index 1    # pane index will start with 1
+set-option -g base-index 1
+set-window-option -g pane-base-index 1
 set-option -g renumber-windows on
 
 # Dont show the [ESC] delay
 set -s escape-time 0
+## Enable mouse control (clickable windows, panes, resizable panes)
+set -g mouse on
 
 ## Keys bindings
 # vim-like pane switching
@@ -11,11 +13,9 @@ bind -r k select-pane -U
 bind -r j select-pane -D
 bind -r h select-pane -L
 bind -r l select-pane -R
+
 # Reload TMUX config
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
-
-## Enable mouse control (clickable windows, panes, resizable panes)
-set -g mouse on
 
 # TPM stuff 
 # Installation: "git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm"
