--- a/kitty.conf
+++ b/kitty.conf
@@ -17,47 +17,68 @@ tab_bar_style powerline
 tab_powerline_style round
 macos_quit_when_last_window_closed yes
 
-# Dracula theme
-foreground            #f8f8f2
-background            #282a36
-selection_foreground  #ffffff
-selection_background  #44475a
-url_color #8be9fd
-# black
-color0  #21222c
-color8  #6272a4
-# red
-color1  #ff5555
-color9  #ff6e6e
-# green
-color2  #50fa7b
-color10 #69ff94
-# yellow
-color3  #f1fa8c
-color11 #ffffa5
-# blue
-color4  #bd93f9
-color12 #d6acff
-# magenta
-color5  #ff79c6
-color13 #ff92df
-# cyan
-color6  #8be9fd
-color14 #a4ffff
-# white
-color7  #f8f8f2
-color15 #ffffff
+# vim:ft=kitty
+
+## name:     Catppuccin Kitty Mocha
+## author:   Catppuccin Org
+## license:  MIT
+## upstream: https://github.com/catppuccin/kitty/blob/main/themes/mocha.conf
+## blurb:    Soothing pastel theme for the high-spirited!
+
+
+
+# The basic colors
+foreground              #CDD6F4
+background              #1E1E2E
+selection_foreground    #1E1E2E
+selection_background    #F5E0DC
 # Cursor colors
-cursor            #f8f8f2
-cursor_text_color background
+cursor                  #F5E0DC
+cursor_text_color       #1E1E2E
+# URL underline color when hovering with mouse
+url_color               #F5E0DC
+# Kitty window border colors
+active_border_color     #B4BEFE
+inactive_border_color   #6C7086
+bell_border_color       #F9E2AF
+# OS Window titlebar colors
+wayland_titlebar_color  #1E1E2E
+macos_titlebar_color    #1E1E2E
 # Tab bar colors
-active_tab_foreground   #282a36
-active_tab_background   #f8f8f2
-inactive_tab_foreground #282a36
-inactive_tab_background #6272a4
-# Marks
-mark1_foreground #282a36
-mark1_background #ff5555
-# Splits/Windows
-active_border_color #f8f8f2
-inactive_border_color #6272a4
+active_tab_foreground   #11111B
+active_tab_background   #CBA6F7
+inactive_tab_foreground #CDD6F4
+inactive_tab_background #181825
+tab_bar_background      #11111B
+# Colors for marks (marked text in the terminal)
+mark1_foreground #1E1E2E
+mark1_background #B4BEFE
+mark2_foreground #1E1E2E
+mark2_background #CBA6F7
+mark3_foreground #1E1E2E
+mark3_background #74C7EC
+# The 16 terminal colors
+# black
+color0 #45475A
+color8 #585B70
+# red
+color1 #F38BA8
+color9 #F38BA8
+# green
+color2  #A6E3A1
+color10 #A6E3A1
+# yellow
+color3  #F9E2AF
+color11 #F9E2AF
+# blue
+color4  #89B4FA
+color12 #89B4FA
+# magenta
+color5  #F5C2E7
+color13 #F5C2E7
+# cyan
+color6  #94E2D5
+color14 #94E2D5
+# white
+color7  #BAC2DE
+color15 #A6ADC8
