--- a/kitty.conf
+++ b/kitty.conf
@@ -30,14 +30,15 @@ selection_background #2D4F67
 selection_foreground #C8C093
 url_color #72A7BC
 cursor #C8C093
-
 # Tabs
 active_tab_background #1F1F28
 active_tab_foreground #C8C093
 inactive_tab_background  #1F1F28
 inactive_tab_foreground #727169
-#tab_bar_background #15161E
-
+tab_bar_background #15161E
+# OS Window titlebar colors
+wayland_titlebar_color  #1F1F28
+macos_titlebar_color    #1F1F28
 # normal
 color0 #16161D
 color1 #C34043
@@ -47,7 +48,6 @@ color4 #7E9CD8
 color5 #957FB8
 color6 #6A9589
 color7 #C8C093
-
 # bright
 color8  #727169
 color9  #E82424
@@ -57,8 +57,6 @@ color12 #7FB4CA
 color13 #938AA9
 color14 #7AA89F
 color15 #DCD7BA
-
-
 # extended colors
 color16 #FFA066
 color17 #FF5D62
