--- a/kitty.conf
+++ b/kitty.conf
@@ -1,19 +1,19 @@
 # vim:ft=kitty
 
 editor nvim
-font_family      FiraCode Nerd Font
-bold_font        auto
-italic_font      auto
-bold_italic_font auto
+
+font_family      FiraCode Nerd Font Mono
 font_size 13.0
-adjust_line_height  1
+
 scrollback_lines 1000
 wheel_scroll_multiplier 5.0
+
 allow_hyperlinks yes
 open_url_with default
-window_padding_width 4
+
 initial_window_width  640
 initial_window_height 400
+
 tab_bar_style powerline
 tab_powerline_style round
 macos_quit_when_last_window_closed yes
@@ -22,8 +22,6 @@ macos_quit_when_last_window_closed yes
 ## license: MIT
 ## author: Tommaso Laurenzi
 ## upstream: https://github.com/rebelot/kanagawa.nvim/
-
-
 background #1F1F28
 foreground #DCD7BA
 selection_background #2D4F67
