feat(kitty): add a bit of window padding

--- a/kitty.conf
+++ b/kitty.conf
@@ -11,6 +11,7 @@ wheel_scroll_multiplier 5.0
 allow_hyperlinks yes
 open_url_with default
 
+window_padding_width 1
 initial_window_width  640
 initial_window_height 400
 
