feat(tmux): unbind r for reloading

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,3 +1,7 @@
+# Leader key
+set -g prefix C-s
+
+# Set the base index for windows and panes
 set-option -g base-index 1
 set-window-option -g pane-base-index 1
 set-option -g renumber-windows on
@@ -6,21 +10,18 @@ set-option -g renumber-windows on
 set -s escape-time 0
 ## Enable mouse control (clickable windows, panes, resizable panes)
 set -g mouse on
-
-## Keys bindings
-# vim-like pane switching
-bind -r k select-pane -U
-bind -r j select-pane -D
-bind -r h select-pane -L
-bind -r l select-pane -R
-
-# Reload TMUX config
-bind r source-file ~/.tmux.conf \; display "Reloaded!"
+# Vim style
+set -g mode-keys vi
 
 # TPM stuff 
 # Installation: "git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm"
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'catppuccin/tmux'
+
+set -g status-position top
+
+# Reload TMUX config
+unbind r
+bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
 run '~/.tmux/plugins/tpm/tpm'
