--- a/kitty.conf
+++ b/kitty.conf
@@ -2,7 +2,7 @@
 
 editor nvim
 
-font_family      FiraCode Nerd Font Mono
+font_family JetBrainsMono Nerd Font
 font_size 13.0
 
 scrollback_lines 1000
