fix(tmux): add keybindings for vim mode

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -12,6 +12,10 @@ set -s escape-time 0
 set -g mouse on
 # Vim style
 set -g mode-keys vi
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
 
 # TPM stuff 
 # Installation: "git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm"
