fix(tmux): fix weird colors in neovim inside a tmux session

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,10 @@
 # Leader key
 set -g prefix C-s
 
+# Default terminal
+set -g default-terminal "xterm" 
+set-option -sa terminal-overrides ",xterm*:Tc"
+
 # Set the base index for windows and panes
 set-option -g base-index 1
 set-window-option -g pane-base-index 1
